--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon dist/index.js",
     "compile": "tsc",
-    "build":"npm i"
+    "build": "npm i"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/otp-generator": "^4.0.2",
     "@types/qrcode": "^1.5.5",
+    "@types/request-ip": "^0.0.41",
     "@types/speakeasy": "^2.0.10",
     "typescript": "^5.4.5"
   },
@@ -37,6 +38,7 @@
     "nodemon": "^3.1.0",
     "otp-generator": "^4.0.1",
     "qrcode": "^1.5.3",
+    "request-ip": "^3.3.0",
     "socket.io": "^4.7.5",
     "speakeasy": "^2.0.0"
   }
