--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/express-useragent": "^1.0.5",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "@types/nodemailer": "^6.4.14",
@@ -31,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-useragent": "^1.0.15",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3",
     "node-device-detector": "^2.1.0",
